kubernet/java/java_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: java
