kubernet/java/java_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: java.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-service
            port:
              number: 8080
  ingressClassName: nginx
